create index.js file, install express v.4.17.1

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,8 @@
     "test": "jest"
   },
   "author": "Mateusz Skibicki",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
